--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -21,11 +21,14 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
+    "axios": "^0.24.0",
     "dotenv": "^8.2.0",
     "hamburger-react": "^2.4.1",
+    "payment": "^2.4.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-query": "^3.34.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
@@ -57,6 +60,8 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
+    "@types/payment": "^2.1.3",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
