--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "name": "Mohammed Saad"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -22,10 +24,13 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "dotenv": "^8.2.0",
     "hamburger-react": "^2.4.1",
+    "moment": "^2.29.1",
     "payment": "^2.4.6",
     "react": "^17.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-query": "^3.34.6",
@@ -62,6 +67,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.1",
     "@types/payment": "^2.1.3",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
