--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "dotenv": "^8.2.0",
+    "firebase": "^9.6.2",
     "hamburger-react": "^2.4.1",
     "moment": "^2.29.1",
     "payment": "^2.4.6",
